--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daisy Nyongesa Foundation</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6BDCENMYG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q6BDCENMYG');
+    </script>
   </head>
   <body>
     <div id="root"></div>
